// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Queries deletes the user 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: user(...).delete is not a function],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries fetches single user 1`] = `
Object {
  "data": undefined,
  "errors": Array [
    [ValidationError: Unknown argument "uid" on field "Query.getUser".],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries it signs up user 1`] = `
Object {
  "data": undefined,
  "errors": Array [
    [ValidationError: Unknown type "Password".],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries updates the user 1`] = `
Object {
  "data": undefined,
  "errors": Array [
    [ValidationError: Unknown type "Password".],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
